compose: Fix bug causing layout shift on expanding compose box.
The messagebox-wrapper div is removed, and it's only style `flex: 1` is
applied to the messagebox div. The `height: 100%` and `margin-top: 5px`
styles on the messagebox div were earlier causing it to move 5px down,
outside the messagebox-wrapper div, when the compose box was expanded.

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -244,13 +244,10 @@
     margin: 0;
     height: 100%;
 
-    .messagebox-wrapper {
-        flex: 1;
-    }
-
     .messagebox {
         /* normally 5px 14px; pull in the right and bottom a bit */
         cursor: default;
+        flex: 1;
         padding: 0;
         background: none;
         box-shadow: none;
